--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
 .jumbotron {
   background-color: transparent;
 }
+
+button {
+  margin-top: .5%;
+}
+
+body {
+  background-image: url(https://media.architecturaldigest.com/photos/5dd8197108d5eb0009de8069/master/w_1600,c_limit/DF-08063.jpg)
+ ; background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
