--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,21 @@
 .jumbotron {
   background-color: transparent;
+  -webkit-text-stroke: .5px white;
 }
 
 button {
   margin-top: .5%;
 }
 
+label {
+  font-weight: bold;
+  -webkit-text-stroke: .2px white;
+}
+
 body {
-  background-image: url(https://media.architecturaldigest.com/photos/5dd8197108d5eb0009de8069/master/w_1600,c_limit/DF-08063.jpg)
- ; background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(https://media.architecturaldigest.com/photos/5dd8197108d5eb0009de8069/master/w_1600,c_limit/DF-08063.jpg);
+  background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
