--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,20 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+.resultBox {
+  display: none;
+  border: solid white .5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
+}
+
+#output {
+  /* font-weight: bold; */
+  color: blanchedalmond;
+  -webkit-text-stroke: .2px white;
+  
+}
