--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,10 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
+  padding: 2%;
 }
 
 #output {
-  /* font-weight: bold; */
   color: blanchedalmond;
   -webkit-text-stroke: .2px white;
   
